manifests/github-runner/webhook/MutatingWebhookConfiguration-actions-runner-controller-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: actions-runner-system/actions-runner-controller-serving-cert
  creationTimestamp: null
  name: actions-runner-controller-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: actions-runner-controller-webhook
      namespace: actions-runner-system
      path: /mutate-actions-summerwind-dev-v1alpha1-runner
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVYRENDQTBTZ0F3SUJBZ0lVQzdkaHY2WkxsSW5kdTJqVnFjQlR1QWNjbXNnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xZWEpqTFhkbFltaHZiMnN3SGhjTk1qWXdNakF4TWpBME5qRXlXaGNOTWpjdwpNakF4TWpBME5qRXlXakFXTVJRd0VnWURWUVFEREF0aGNtTXRkMlZpYUc5dmF6Q0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFOS1lPVlYyTE5vSk9ibDlTdHRSZUJHYzZDYkhwNXpCMUp0dUdHRXkKN2g1bnpUZG50L0VmNlp5dDZBSW94bmpiZThWQmM0VnRUZWQ5ak9xU3NNZGRTTzU4eEc3RDluc0Y4ZHdnbnNhWQpSL3BTSjVOYTBGdU [...]
  failurePolicy: Fail
  name: mutate.runner.actions.summerwind.dev
  rules:
  - apiGroups:
    - actions.summerwind.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - runners
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: actions-runner-controller-webhook
      namespace: actions-runner-system
      path: /mutate-actions-summerwind-dev-v1alpha1-runnerdeployment
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVYRENDQTBTZ0F3SUJBZ0lVQzdkaHY2WkxsSW5kdTJqVnFjQlR1QWNjbXNnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xZWEpqTFhkbFltaHZiMnN3SGhjTk1qWXdNakF4TWpBME5qRXlXaGNOTWpjdwpNakF4TWpBME5qRXlXakFXTVJRd0VnWURWUVFEREF0aGNtTXRkMlZpYUc5dmF6Q0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFOS1lPVlYyTE5vSk9ibDlTdHRSZUJHYzZDYkhwNXpCMUp0dUdHRXkKN2g1bnpUZG50L0VmNlp5dDZBSW94bmpiZThWQmM0VnRUZWQ5ak9xU3NNZGRTTzU4eEc3RDluc0Y4ZHdnbnNhWQpSL3BTSjVOYTBGdU [...]
  failurePolicy: Fail
  name: mutate.runnerdeployment.actions.summerwind.dev
  rules:
  - apiGroups:
    - actions.summerwind.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - runnerdeployments
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: actions-runner-controller-webhook
      namespace: actions-runner-system
      path: /mutate-actions-summerwind-dev-v1alpha1-runnerreplicaset
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVYRENDQTBTZ0F3SUJBZ0lVQzdkaHY2WkxsSW5kdTJqVnFjQlR1QWNjbXNnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xZWEpqTFhkbFltaHZiMnN3SGhjTk1qWXdNakF4TWpBME5qRXlXaGNOTWpjdwpNakF4TWpBME5qRXlXakFXTVJRd0VnWURWUVFEREF0aGNtTXRkMlZpYUc5dmF6Q0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFOS1lPVlYyTE5vSk9ibDlTdHRSZUJHYzZDYkhwNXpCMUp0dUdHRXkKN2g1bnpUZG50L0VmNlp5dDZBSW94bmpiZThWQmM0VnRUZWQ5ak9xU3NNZGRTTzU4eEc3RDluc0Y4ZHdnbnNhWQpSL3BTSjVOYTBGdU [...]
  failurePolicy: Fail
  name: mutate.runnerreplicaset.actions.summerwind.dev
  rules:
  - apiGroups:
    - actions.summerwind.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - runnerreplicasets
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: actions-runner-controller-webhook
      namespace: actions-runner-system
      path: /mutate-runner-set-pod
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVYRENDQTBTZ0F3SUJBZ0lVQzdkaHY2WkxsSW5kdTJqVnFjQlR1QWNjbXNnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xZWEpqTFhkbFltaHZiMnN3SGhjTk1qWXdNakF4TWpBME5qRXlXaGNOTWpjdwpNakF4TWpBME5qRXlXakFXTVJRd0VnWURWUVFEREF0aGNtTXRkMlZpYUc5dmF6Q0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFOS1lPVlYyTE5vSk9ibDlTdHRSZUJHYzZDYkhwNXpCMUp0dUdHRXkKN2g1bnpUZG50L0VmNlp5dDZBSW94bmpiZThWQmM0VnRUZWQ5ak9xU3NNZGRTTzU4eEc3RDluc0Y4ZHdnbnNhWQpSL3BTSjVOYTBGdU [...]
  failurePolicy: Fail
  name: mutate-runner-pod.webhook.actions.summerwind.dev
  rules:
  - apiGroups:
    - ''
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
  objectSelector:
    matchLabels:
      actions-runner-controller/inject-registration-token: 'true'
  timeoutSeconds: 10
